# hugin-meetings

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
frontends/gnome/: pyproject.toml
frontends/gnome/desktop/: hugin-recorder.desktop  launcher.sh
frontends/gnome/src/hugin_meetings_gnome/: __init__.py  install.py  recorder.py
frontends/gnome/tests/: test_install.py
src/hugin_meetings/: __init__.py  audio_routes.py  calendar_match.py  cli_utils.py  config.py  diarization_compare.py  enroll.py  migrate_yyyy.py  pipeline.py  recording.py  remote_llm.py  schedule.py  slack_post.py  summarize.py  transcribe.py  transcribe_part.py  tui.py
src/hugin_meetings/prompts/: project_matcher_default.md  summary_default.md  summary_sv_personal.example.md
tests/: test_audio_routes.py  test_calendar_match.py  test_pipeline_delete.py  test_prompts_config.py  test_recording_helpers.py  test_remote_llm.py  test_schedule.py  test_yyyy_layout.py
