[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hugin-meetings"
version = "0.1.0"
description = "Record, transcribe, diarize, and summarize meetings. Part of the Hugin personal productivity stack."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "David Fendrich" }]
dependencies = [
    "hugin",
]

[project.optional-dependencies]
transcribe = [
    "huggingface-hub",
    "nemo_toolkit[asr]",
    "numpy",
    "pandas",
    "pyannote.audio",
    "torch",
    "torchaudio",
    "whisperx",
]
summarize-local = [
    "llama-cpp-python",
]

[project.scripts]
hugin-meet-transcribe = "hugin_meetings.transcribe:main"
hugin-meet-summarize = "hugin_meetings.summarize:main"
hugin-meet-enroll = "hugin_meetings.enroll:main"
hugin-meet-match-calendar = "hugin_meetings.calendar_match:main"
hugin-meet-tui = "hugin_meetings.tui:main"
hugin-meet-migrate-yyyy = "hugin_meetings.migrate_yyyy:main"
hugin-meet-slack-post = "hugin_meetings.slack_post:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hugin_meetings = ["prompts/*.md"]
